<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/mrgIzq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="21dp" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/mrgDer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent=".95"
        android:orientation="vertical"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/crdAccion"
        android:layout_width="300dp"
        android:layout_height="40dp"
        app:cardCornerRadius="24dp"
        app:cardBackgroundColor="@color/cardColor"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/crdEevee">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:text="@string/strAccion"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/txtColor"
                android:fontFamily="@font/font_sour_gummy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/crdEevee"
        android:layout_width="180dp"
        android:layout_height="150dp"
        android:backgroundTint="@color/cardColor"
        app:cardCornerRadius="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/crdAccion"
        app:layout_constraintBottom_toTopOf="@id/crdEspeon">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:id="@+id/ivEevee"
                android:layout_width="64dp"
                android:layout_height="55dp">
            </ImageView>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strEevee"
                android:fontFamily="@font/font_sour_gummy"
                android:textSize="20sp"
                android:textColor="@color/txtColor"
                android:textStyle="bold">
            </TextView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/crdEspeon"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:backgroundTint="@color/cardColor"
        app:cardCornerRadius="24dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toTopOf="@id/crdGlaceon"
        app:layout_constraintEnd_toStartOf="@id/crdFlareon"
        app:layout_constraintStart_toStartOf="@id/mrgIzq"
        app:layout_constraintTop_toBottomOf="@id/crdEevee">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:id="@+id/ivEspeon"
                android:layout_width="60dp"
                android:layout_height="77dp">
            </ImageView>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strEspeon"
                android:fontFamily="@font/font_sour_gummy"
                android:textSize="20sp"
                android:textColor="@color/txtColor"
                android:textStyle="bold">
            </TextView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/crdFlareon"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:cardCornerRadius="24dp"
        android:backgroundTint="@color/cardColor"
        app:layout_constraintStart_toEndOf="@id/crdEspeon"
        app:layout_constraintEnd_toEndOf="@id/mrgDer"
        app:layout_constraintTop_toBottomOf="@id/crdEevee"
        app:layout_constraintBottom_toTopOf="@id/crdJolteon">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:id="@+id/ivFlareon"
                android:layout_width="59dp"
                android:layout_height="93dp">
            </ImageView>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strFlareon"
                android:fontFamily="@font/font_sour_gummy"
                android:textSize="20sp"
                android:textColor="@color/txtColor"
                android:textStyle="bold">
            </TextView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/crdGlaceon"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/cardColor"
        app:cardCornerRadius="24dp"
        app:layout_constraintBottom_toTopOf="@id/crdLeafeon"
        app:layout_constraintEnd_toStartOf="@id/crdJolteon"
        app:layout_constraintStart_toStartOf="@id/mrgIzq"
        app:layout_constraintTop_toBottomOf="@id/crdEspeon">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:id="@+id/ivGlaceon"
                android:layout_width="69dp"
                android:layout_height="80dp">
            </ImageView>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strGlaceon"
                android:fontFamily="@font/font_sour_gummy"
                android:textSize="20sp"
                android:textColor="@color/txtColor"
                android:textStyle="bold">
            </TextView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/crdJolteon"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:backgroundTint="@color/cardColor"
        app:cardCornerRadius="24dp"
        app:layout_constraintBottom_toTopOf="@id/crdSylveon"
        app:layout_constraintEnd_toEndOf="@id/mrgDer"
        app:layout_constraintStart_toEndOf="@id/crdGlaceon"
        app:layout_constraintTop_toBottomOf="@id/crdFlareon">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:id="@+id/ivJolteon"
                android:layout_width="49dp"
                android:layout_height="69dp">
            </ImageView>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strJolteon"
                android:fontFamily="@font/font_sour_gummy"
                android:textSize="20sp"
                android:textColor="@color/txtColor"
                android:textStyle="bold">
            </TextView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/crdLeafeon"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:cardCornerRadius="24dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/cardColor"
        app:layout_constraintStart_toStartOf="@id/mrgIzq"
        app:layout_constraintEnd_toStartOf="@id/crdSylveon"
        app:layout_constraintTop_toBottomOf="@id/crdGlaceon"
        app:layout_constraintBottom_toTopOf="@id/crdUmbreon">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:id="@+id/ivLeafeon"
                android:layout_width="50dp"
                android:layout_height="73dp">
            </ImageView>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strLeafeon"
                android:fontFamily="@font/font_sour_gummy"
                android:textSize="20sp"
                android:textColor="@color/txtColor"
                android:textStyle="bold">
            </TextView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/crdSylveon"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:cardCornerRadius="24dp"
        android:backgroundTint="@color/cardColor"
        app:layout_constraintStart_toEndOf="@id/crdLeafeon"
        app:layout_constraintEnd_toEndOf="@id/mrgDer"
        app:layout_constraintTop_toBottomOf="@id/crdJolteon"
        app:layout_constraintBottom_toTopOf="@id/crdVaporeon">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:id="@+id/ivSylveon"
                android:layout_width="59dp"
                android:layout_height="86dp">
            </ImageView>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strSylveon"
                android:fontFamily="@font/font_sour_gummy"
                android:textSize="20sp"
                android:textColor="@color/txtColor"
                android:textStyle="bold">
            </TextView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/crdUmbreon"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:cardCornerRadius="24dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/cardColor"
        app:layout_constraintStart_toStartOf="@id/mrgIzq"
        app:layout_constraintEnd_toStartOf="@id/crdVaporeon"
        app:layout_constraintTop_toBottomOf="@id/crdLeafeon"
        app:layout_constraintBottom_toBottomOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:id="@+id/ivUmbreon"
                android:layout_width="48dp"
                android:layout_height="77dp">
            </ImageView>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strUmbreon"
                android:fontFamily="@font/font_sour_gummy"
                android:textSize="20sp"
                android:textColor="@color/txtColor"
                android:textStyle="bold">
            </TextView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/crdVaporeon"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:cardCornerRadius="24dp"
        android:backgroundTint="@color/cardColor"
        app:layout_constraintStart_toEndOf="@id/crdUmbreon"
        app:layout_constraintEnd_toEndOf="@id/mrgDer"
        app:layout_constraintTop_toBottomOf="@id/crdSylveon"
        app:layout_constraintBottom_toBottomOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:id="@+id/ivVaporeon"
                android:layout_width="102dp"
                android:layout_height="72dp">
            </ImageView>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strVaporeon"
                android:fontFamily="@font/font_sour_gummy"
                android:textSize="20sp"
                android:textColor="@color/txtColor"
                android:textStyle="bold">
            </TextView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>